# QRApp-BackEnd

./: .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QRApp.db  README.md  compose.yaml  compose.yml  main.py  nginx.conf  promtail-config.yaml  pyproject.toml  test.py
.github/workflows/: deploy.yml  docker-ci.yml  docker-image.yml
alembic/: env.py
app/: main.py  socket.py
app/api/: dependency.py
app/api/middleware/: __init__.py  exception.py  logging.py
app/api/router/: __init__.py
app/api/service/: __init__.py  base.py  user.py
app/api/view/: __init__.py  auth.py
app/common/: api_message.py  api_response.py  enum.py  exceptions.py  http_exception.py  responses.py
app/core/: config.py  security.py
app/core/decorator/: __init__.py  rate_limiter.py
app/core/middleware/: __init__.py  trace.py  (+2 more)
app/db/: __init__.py  minio.py  mongo.py  redis.py
app/models/: __init__.py  area.py  base.py  branch.py  business.py  category.py  group.py  order.py  payment.py  permission.py  plan.py  product.py  request.py  restaurant.py  service_unit.py  table.py  user.py
app/schema/: __init__.py  area.py  auth.py  branch.py  business.py  category.py  group.py  order.py  payment.py  permission.py  plan.py  product.py  request.py  restaurant.py  service_unit.py  table.py  user.py
app/service/: __init__.py  area.py  base.py  branch.py  business.py  category.py  group.py  order.py  payment.py  permission.py  plan.py  product.py  request.py  restaurant.py  service_unit.py  table.py  user.py
benchmark/: main.py
deploy/: Vagrantfile
(+29 files in other folders)
